[gd_scene load_steps=6 format=2]

[ext_resource path="res://Themes/Fonts/chevy-ray-pixel-font/ChevyRay - Bubble Time.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Themes/UI.tres" type="Theme" id=2]
[ext_resource path="res://GameOverHUD.gd" type="Script" id=3]
[ext_resource path="res://assets/key.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[node name="GameOverHUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 336.0
margin_top = 136.0
margin_right = 687.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 464.0
margin_top = 256.0
margin_right = 560.0
margin_bottom = 306.0

[node name="RetryButton" type="Button" parent="VBoxContainer"]
margin_right = 96.0
margin_bottom = 23.0
focus_neighbour_top = NodePath("../BackButton")
text = "Retry"

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 96.0
margin_bottom = 50.0
focus_neighbour_bottom = NodePath("../RetryButton")
text = "Back"

[node name="UIAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="VBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
